Advance Rust substrate bridge and build-plan handoff